a tag color to DimGray

--- a/Fulcrum_FluidTX_Trunk/HTMLReportingFiles_1.1/csssheets/res.css
+++ b/Fulcrum_FluidTX_Trunk/HTMLReportingFiles_1.1/csssheets/res.css
@@ -151,7 +151,7 @@ li {
     padding: 8px;
     text-decoration: none;
     text-transform: uppercase;
-	color	:white;
+	color	: DimGray;
 	/*color: #F0FFFF;
 	
     background-color: #8A2BE2;
